@@ -369,7 +369,7 @@ forget
 \item[included ( filenameptr filenamelength -- )] Load and parse file.
 \item[require filename ( -- )] Like include, except that load is skipped if the file is already loaded.
 \item[required ( filenameptr filenamelength -- )] Like included, except that load is skipped if the file is already loaded.
-\item[loadb ( filenameptr filenamelength dst -- )] Load binary block to dst. \texttt{ae @} gives the end address of the loaded data.
+\item[loadb ( filenameptr filenamelength dst -- endaddr )] Load binary block to dst. Returns 0 on failure, otherwise address after last written byte.
 \item[saveb ( start end filenameptr filenamelength -- )] Save binary block.
 \item[device ( device\# -- )] Switches the active device. 8 to 11 are valid device\#'s.
 \item[save-forth filename ( -- )] Saves the forth to the given filename.
