@@ -1,9 +1,8 @@
 \ submitted by kevin reno
 
 : ls base @ decimal
-s" $" here loadb drop
-ae @ 2 - here 
-begin 2dup <> while 
+s" $" here loadb 2 - here
+begin 2dup <> while
 2+ dup @ . space 2+
 begin dup c@ ?dup while
 emit 1+ repeat 1+ cr repeat
