@@ -328,6 +328,7 @@ Thanks to polluks for suggestions!
 v1.6.4
 
  * forth: INCLUDED now interprets the file
- * forth: added ?do
- * forth: added defer, defer!, is to compat
+ * forth: added ?DO
+ * forth: added DEFER DEFER! IS to compat
+ * forth: made loadb return address after last written byte
  * debug: made see show branch
